# bigmc

./: .gitignore  README.md  configure.ac
doc/: Makefile.am
doc/examples/: addition.bigraph  airport.bigraph  ccs.bigraph  ccs2.bigraph  ciao.ps  clone.bigraph  dining.bigraph  dining_mutex.bigraph  dining_nil.bigraph  diverge_prop.bigraph  hole.bigraph  hole2.bigraph  hospital.bigraph  match.bigraph  matches.bigraph  nil.bigraph  notify.bigraph  par.bigraph  par4.bigraph  prop.bigraph  synkTest.bigraph  terminal.bigraph  unary.bigraph  wide.bigraph
doc/new examples/: airport2.bgm  ccs2.bgm  clone.bgm  dining_mutex.bgm  diverge.bgm  foo.bgm  foo2.bgm  foo3.bgm  link.bgm  matches.bgm  par2.bgm  par3.bgm  prop.bgm  subtree.bgm  unordered_subtree.bgm  visivo  wide2.bgm  wide3.bgm
doc/new syntax examples/: example1.bgm  example2.bgm  example3.bgm
doc/variables examples/: ciao.ps  example1.bgm  example3.bgm  example4.bgm  example5.bgm  example6.bgm
include/: bigraph.h  globals.h  mc.h  node.h
src/: bgparser.hpp  bgparser.ypp  bgscanner.ll  bigraph.cpp  driver.cpp  graph.cpp  main.cpp  mc.cpp  node.cpp  parser.cpp
variable tests/: example1.bgm  example5.bgm
